<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signIn.SignInFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/futuramasigninimage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp"
        android:gravity="center|center_vertical">


        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:minHeight="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:ems="10"
            android:id="@+id/edit_text_user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#41AE45"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#41AE45"
            android:text="@string/register" />



    </LinearLayout>




</FrameLayout>