<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/futuramasigninimage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_confirm_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/ok"
            android:backgroundTint="#0D8A12" />
    </LinearLayout>

</FrameLayout>